add-btn style fix

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         background: rgba(255, 255, 255, 0.2);
       }
 
-      .add-btn {
+      .button {
         padding: 8px;
         border: none;
         border-radius: 5px;
@@ -106,7 +106,7 @@
         transition: background 0.3s ease;
       }
 
-      .add-btn:hover {
+      .button:hover {
         background: #ff3980;
       }
 
