add-btn style fix 2

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         background: rgba(255, 255, 255, 0.2);
       }
 
-      .button {
+      .add-btn {
         padding: 8px;
         border: none;
         border-radius: 5px;
@@ -106,7 +106,7 @@
         transition: background 0.3s ease;
       }
 
-      .button:hover {
+      .add-btn:hover {
         background: #ff3980;
       }
 
@@ -207,6 +207,7 @@
 
         // Button to add todo items
         const addButton = document.createElement("button");
+        addButton.classList.add("add-btn");
         addButton.textContent = "Add Todo";
         addButton.addEventListener("click", () =>
           addTodoItem(day, todoInput, todoList)
